force-app/main/default/objects/OA_Slip_Header__c/fields/OA_Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>OA_Invoice_Name__c</fullName>
    <description>Text field to capture Open Air Invoice Name on pre-bills sent via integration - BIZ-47312</description>
    <label>OpenAir Invoice Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>