force-app/main/default/objects/OA_Slip_Header__c/fields/Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Process_Status__c</fullName>
    <description>picklist value set based on success or failure of Service Billing process</description>
    <label>Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>