force-app/main/default/objects/OA_Slip_Header__c/fields/Processed_On__c.field-meta.xml
<CustomField>
    <fullName>Processed_On__c</fullName>
    <description>timestamp when Processed flag is set</description>
    <label>Processed On</label>
    <type>DateTime</type>
</CustomField>