force-app/main/default/objects/OA_Slip_Header__c/fields/SF_Process_Error__c.field-meta.xml
<CustomField>
    <fullName>SF_Process_Error__c</fullName>
    <description>field to store errors thrown during Service Billing process</description>
    <label>SF Process Error</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>