force-app/main/default/objects/OA_Slip_Header__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OA_Invoice_Name__c</columns>
    <columns>OA_Invoice_ID__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>OA_Invoice_Subtotal__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Processed__c</columns>
    <columns>SF_Process_Error__c</columns>
    <columns>Process_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>